# dib

./: .gitignore  Cargo.toml  README.md
src/: decode.rs  encode.rs  lib.rs  until.rs
