[package]
name = "dib"
version = "0.1.0"
edition = "2021"
description = "device independent bitmap (DIB) / BMP file format decoder"
authors = ["bend-n <bend.n@outlook.com>"]
license = "MIT"
repository = "https://github.com/bend-n/dib"
exclude = ["tdata", ".gitignore", "benches", "fuzz"]
keywords = ["image", "format", "encoding", "decoding"]
categories = ["multimedia::images", "graphics", "encoding"]

[dependencies]
atools = "0.1.4"
bites = "0.0.0"
car = "0.1.0"
